Featute organization authorization (#143)
* feature: custom organization authorization

* feature: add new helpfull role endpoints

* fix: minor changes

* refactor: minor cleanup

* refactor: continue organization role membership implementation

* refactor: final cleanup

* fix: address review feedback

* feature: additional test seed data

* fix: wrong permission for upload picture